[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
core = { path = "../core" }
proto = { path = "../proto" }
infer = { path = "../infer" }
ui = { path = "../ui" }

[[bin]]
name = "deeptrace"
path = "src/main.rs"
