[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.0" # msgpack
serde_json = "1.0.145"
anyhow = "1.0.100"
serde_cbor = "0.11.2"
bson = { version = "3.1.0", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
urlencoding = "2.1.3"
html-escape = "0.2.13"
flate2 = "1.1.5"
brotli = "8.0.2"
zstd = "0.13.3"
lz4_flex = "0.12.0"
serde_yaml = "0.9.34+deprecated"
toml = "0.9.8"
md5 = "0.8.0"
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
blake2 = "0.11.0-rc.3"
crc32fast = "1.5.0"
chrono = "0.4.42"
